[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.2.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.23"
worker = { path = "../worker" }
